Fix up spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,7 +91,7 @@ h1 {
   font-family: "Georgia";
   font-size: 18px;
   font-weight: 500;
-  margin-bottom: 40px; }
+  margin-bottom: 20px; }
 
 h3 {
   font-size: 14px;
@@ -102,7 +102,7 @@ h3 {
   background-color: white;
   width: 52px;
   margin: 0 auto;
-  margin-bottom: 50px; }
+  margin-bottom: 20px; }
 
 #commitment-level {
   margin-top: 35px; }
