--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -49,7 +49,7 @@ h1 {
 	font-family:"Georgia";
 	font-size:18px;
 	font-weight:500;
-	margin-bottom:40px;
+	margin-bottom:20px; 
 }
 
 h3 {
@@ -61,7 +61,7 @@ h3 {
 	background-color:white;
 	width:52px;
 	margin:0 auto;
-	margin-bottom:50px;
+	margin-bottom:20px;
 
 }
 
